Pull request - 2186: AG-40160 Fixed broken layout of popup in Firefox
Squashed commit of the following:

commit a38bb191e8dfe2d3c8282552dedd9667d30dd216
Merge: 2a734d478 df476a2fd
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Mon Feb 24 15:42:31 2025 +0200

    Merge branch 'master' into fix/AG-40160

commit 2a734d4788f2289cce92ff43c8e31b5f6822a426
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Feb 21 17:03:18 2025 +0500

    fixed splash screen

commit 6fe1d4d6933acd911b75ecc52c0d5e49b45001af
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Feb 21 16:55:05 2025 +0500

    fix

--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -54,6 +54,10 @@
 
     /* NEW VARS */
 
+    /* Other variables */
+    --popup-width: 320px;
+    --popup-height: 600px;
+
     /* Base colors: */
 
     --product-primary-0: #f7fbf8;
