--- a/Extension/src/pages/popup/components/Popup/popup.pcss
+++ b/Extension/src/pages/popup/components/Popup/popup.pcss
@@ -1,6 +1,6 @@
 .popup {
     height: 100%;
-    min-height: 600px;
+    min-height: var(--popup-height);
     overflow: hidden;
     display: flex;
     justify-content: flex-start;
